welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
override def run() {
  var nb = 0;
  var diag = 1;
  def serpent(diag:Int):Int={
    if(getY()==0 && diag<7){ setPos(0,getX()+1); return diag+1}
    else if(getX()==getMondeHauteur-1 && diag>=7){
      diag+=1
      setPos(diag-getMondeLargeur(),getMondeHauteur()-1); return diag}
    else{ setPos(getX()+1,getY-1);return diag } 
    }
    
    
    do{
      ecritMessage(diag)
      nb+=1
      diag = serpent(diag)      
    }while(getX()!=getMondeLargeur -1 || getY()!=getMondeHauteur-1 )
    
  }
